# DacovaDetectionDemo

./: README.md  onnx_demo.py  openvino_demo.py  openvino_video.py  requirements.txt
common/: data_utils.py  detection_postprocess_np.py  postprocess_np.py  utils.py  wbf_postprocess.py
cpp/: main  main.cpp  run.sh
onnx_cpp/: CMakeLists.txt  Dockerfile  README.md  main.cpp
openvino_cpp/: Dockerfile  README.md  main.cpp
samples/weights/onnx/: dacovadetection_20221212_114558_84403.json  dacovadetection_20221212_114558_84403_result.json
samples/weights/openvino/: dacovadetection_20221129_13345_265666.json  dacovadetection_20221129_13345_265666.mapping  dacovadetection_20221129_13345_265666.xml  dacovadetection_20221129_13345_265666_result.json  dacovadetection_20221214_145226_331380.json  dacovadetection_20221214_145226_331380.mapping  dacovadetection_20221214_145226_331380.xml  dacovadetection_20221214_145226_331380_result.json
